--- a/apps3.json
+++ b/apps3.json
@@ -1,7 +1,7 @@
 [
   {
     "name": "Magasin VR",
-    "packageName": "com.CFPFV.MagasinVR",
+    "packageName": "org.schabi.newpipe",
     "version": 1,
     "apk": "https://raw.githubusercontent.com/isheep225/CFPVD_Store/main/NewPipe_v0.28.0.apk",
     "description": "Une application pour mettre en pratique les compétences de disposition en Vente-conseil. Placez du mobilier, puis des produits, dans un magasin virtuel dans lequel vous pouvez ensuite naviguer à votre guise.",
